# ml_platform

./: .gitignore  README.md  requirements.txt
ml_automation/: monitor.py  print_service.py  worker.py
ml_core/: __init__.py  pyproject.toml
ml_core/ml_core/: __init__.py  config.py  db.py  logger_config.py  ml_api.py  notifier.py  token_manager.py
ml_core/src/ml_core/: __init__.py  cli.py  config.py  db.py  ml_api.py  notifier.py
ml_core/src/ml_core/ads/: brain.py  ml_ads_api.py  optimizer.py  rules.py
ml_reclamos/: app.py  database.py  email_service.py  mensajes.json  mensajes_service.py  ml_service.py  requirements.txt  telegram_service.py
ml_reclamos/routes/: admin_routes.py  complaints_routes.py
ml_reclamos/templates/: admin.html  form.html  login.html
scripts/: generar_qr_reclamos.py  init_db.py  test_brain.py  test_db.py  test_full.py  test_ml.py  test_sync.py
