[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_core"
version = "0.1.0"
description = "Mercado Libre automation core"
authors = [{name = "Guido Braslavsky"}]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ml = "ml_core.cli:cli"
